--- a/pom.xml
+++ b/pom.xml
@@ -229,25 +229,25 @@
                         <bundle>
                             <groupId>org.apache.sling</groupId>
                             <artifactId>org.apache.sling.scripting.sightly</artifactId>
-                            <version>1.0.0-SNAPSHOT</version>
+                            <version>1.0.0</version>
                             <startLevel>20</startLevel>
                         </bundle>
                         <bundle>
                             <groupId>org.apache.sling</groupId>
                             <artifactId>org.apache.sling.scripting.sightly.js.provider</artifactId>
-                            <version>1.0.0-SNAPSHOT</version>
+                            <version>1.0.0</version>
                             <startLevel>20</startLevel>
                         </bundle>
                         <bundle>
                             <groupId>org.apache.sling</groupId>
                             <artifactId>org.apache.sling.scripting.sightly.testing-content</artifactId>
-                            <version>1.0.0-SNAPSHOT</version>
+                            <version>1.0.0</version>
                             <startLevel>20</startLevel>
                         </bundle>
                         <bundle>
                             <groupId>org.apache.sling</groupId>
                             <artifactId>org.apache.sling.scripting.sightly.repl</artifactId>
-                            <version>1.0.0-SNAPSHOT</version>
+                            <version>1.0.0</version>
                             <startLevel>20</startLevel>
                         </bundle>
                     </additionalBundles>
