--- a/contrib/explorers/resourceeditor/pom.xml
+++ b/contrib/explorers/resourceeditor/pom.xml
@@ -106,6 +106,15 @@
 					</execution>
 				</executions>
 		    </plugin>
+            <plugin>
+              <groupId>org.apache.rat</groupId>
+              <artifactId>apache-rat-plugin</artifactId>
+              <configuration>
+                <excludes>
+                  <exclude>frontend/**</exclude>
+                </excludes>
+              </configuration>
+            </plugin>		    
 		</plugins>
 		<extensions>
 			<extension>
