--- a/contrib/launchpad/debian/pom.xml
+++ b/contrib/launchpad/debian/pom.xml
@@ -46,9 +46,6 @@ under the License.
             jdeb plugin version for debian package
         -->
         <jdeb.version>1.4</jdeb.version>
-        <launchpad.artifact>org.apache.sling.launchpad</launchpad.artifact>
-        <launchpad.version>8-SNAPSHOT</launchpad.version>
-        <launchpad.classifier>standalone</launchpad.classifier>
         <slingInstallDir>/opt/sling</slingInstallDir>
         <slingConfigDir>/etc/sling</slingConfigDir>
         <slingS3Dir>${basedir/../../sling-s3}</slingS3Dir>
@@ -137,6 +134,8 @@ under the License.
                         </goals>
                         <configuration>
                             <classifier>all</classifier>
+                            <snapshotExpand>true</snapshotExpand>
+                            <snapshotEnv>BUILD_NUMBER</snapshotEnv>
                             <dataSet>
                                 <!-- etc/{default,logrotate.d}/sling - conf files -->
                                 <data>
