--- a/pom.xml
+++ b/pom.xml
@@ -29,16 +29,16 @@
 
     <artifactId>org.apache.sling.scripting.sightly.testing</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
 
     <name>Apache Sling Scripting Sightly Integration Tests</name>
     <description>This project runs the integration tests for validating the Apache Sling Scripting Sightly implementation
         against the Adobe Sightly TCK.</description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.scripting.sightly.testing-1.0.2</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.scripting.sightly.testing-1.0.2</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.scripting.sightly.testing-1.0.2</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/contrib/scripting/sightly/testing</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/contrib/scripting/sightly/testing</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/trunk/contrib/scripting/sightly/testing</url>
     </scm>
 
     <properties>
